feat - add the support to check and download update using cordova-plugin-code-push

--- a/app/pages/root.html
+++ b/app/pages/root.html
@@ -8,6 +8,9 @@
 
   <div class="spinner-container">
     <ion-spinner name="ios"></ion-spinner>
+
+    <p> {{ messageText }} </p>
+
   </div>
-  
+
 </ion-content>
